[gd_scene load_steps=3 format=2]

[ext_resource path="res://card/Card.gd" type="Script" id=1]
[ext_resource path="res://assets/music/click.tres" type="AudioStream" id=2]

[node name="Card" type="TextureButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
script = ExtResource( 1 )
_sections_unfolded = [ "Focus", "Material", "Mouse", "Rect", "Textures", "Transform", "Visibility", "Z Index" ]

[node name="clickStream" type="AudioStreamPlayer2D" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]

[connection signal="pressed" from="." to="." method="_on_Card_pressed"]


